--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "saral-ui",
+	"name": "@lucidan/ui",
 	"version": "0.0.3",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
-		"pub": "pnpm package && cd package && pnpm publish"
+		"pub": "pnpm package && cd package && pnpm publish --access=public"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "next",
